name:                pipes-reddit
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Reddit.Pipes
  build-depends:
    base == 4.7.*,
    containers,
    pipes,
    reddit,
    transformers
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  ghc-options: -Wall
